2008-07-05  Karl Berry  <karl@gnu.org>

	* install-info/tests/*-test: use mktemp XXXXXXXX for BSD.
	Report from Unga, 29 Jun 2008 08:29:54.

2008-07-04  Akim Demaille  <akim@epita.fr>

	texi2dvi: Fix -t.
	* util/texi2dvi (run_tex): The code that installs a symlink was
	installing the symlink directly to itself, instead of towards the
	actual source file.  I wonder how it worked.  As a result -t was
	not taken into account.
	Fix the symlink creation.
	* util/texi2dvi.test (one_run): Test -t support.

2008-07-03  Karl Berry  <karl@gnu.org>

	* doc/Makefile.am (pdftexi2dvi.1): use change_envvars here too.

2008-07-02  Karl Berry  <karl@gnu.org>

	* util/texi2dvi (generated_files_get): find .fls files too.
	(from the -recorder option.)
	Suggestion from Wybo Dekker.

2008-07-01  Karl Berry  <karl@gnu.org>

	* doc/Makefile.am (change_envvars): include util_srcdir in PATH
	so texi2pdf can find texi2dvi for making the man pages.
	Report from Michael Haubenwallner, 01 Jul 2008 14:33:18.

2008-06-28  Sergey Poznyakoff  <gray@gnu.org.ua>

	* info/info.c (long_option): New options
	--show-malformed-multibytes and --no-show-malformed-multibytes
	* info/man.c (find_man_formatter): If INFO_MAN_COMMAND is
	specified, use its value as man command.
	* info/window.c (show_malformed_multibyte_p): New variable.
	(process_node_text): Ignore malformed multibyte characters unless
	show_malformed_multibyte_p is set.
	* info/window.h (show_malformed_multibyte_p): New extern.

	* doc/info-stnd.texi (Invoking Info): Document new options.
	* NEWS: Likewise.

2008-06-18  Akim Demaille  <akim@epita.fr>

	* util/texi2dvi (usage): More comments.
	(version): exit 0.
	Reported by Karl Berry.

2008-06-16  Akim Demaille  <akim@epita.fr>

	* util/texi2dvi (version): New function, to replace...
	($version): this.
	(usage): Document --dvipdf.

2008-06-16  Akim Demaille  <akim@epita.fr>

	* util/texi2dvi: Sort functions.

2008-06-16  Akim Demaille  <akim@epita.fr>
